--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "@types/react": "^16.9.46",
     "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-dom": "^16.9.8",
+    "formik": "^2.1.5",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
+    "react-yandex-maps": "^4.4.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "typescript": "^3.7.5"
