--- a/package.json
+++ b/package.json
@@ -13,23 +13,18 @@
     "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-dom": "^16.9.8",
     "classnames": "^2.2.6",
-    "formik": "^2.1.5",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
-    "react-dnd": "^11.1.3",
-    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
     "react-yandex-maps": "^4.4.0",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "debug": "NODE_ENV=debug npm test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -48,14 +43,10 @@
     ]
   },
   "devDependencies": {
-    "@types/enzyme": "^3.10.6",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/puppeteer": "^3.0.2",
     "@types/react-test-renderer": "^16.9.3",
-    "@typescript-eslint/eslint-plugin": "^4.2.0",
-    "@typescript-eslint/parser": "^4.2.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.4",
-    "react-beautiful-dnd-test-utils": "^3.2.1",
+    "faker": "^5.1.0",
+    "puppeteer": "^5.3.1",
     "react-test-renderer": "^16.13.1"
   }
 }
