--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "map-route",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://a13xand9r.github.io/map-route",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -17,15 +18,16 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "react-yandex-maps": "^4.4.0",
+    "react-yandex-maps": "^4.5.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "debug": "NODE_ENV=debug npm test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -46,6 +48,7 @@
     "@types/puppeteer": "^3.0.2",
     "@types/react-test-renderer": "^16.9.3",
     "faker": "^5.1.0",
+    "gh-pages": "^3.1.0",
     "puppeteer": "^5.3.1",
     "react-test-renderer": "^16.13.1"
   }
