--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.0",
     "react-yandex-maps": "^4.5.0",
     "typescript": "^3.7.5"
   },
@@ -45,11 +45,8 @@
     ]
   },
   "devDependencies": {
-    "@types/puppeteer": "^3.0.2",
     "@types/react-test-renderer": "^16.9.3",
-    "faker": "^5.1.0",
     "gh-pages": "^3.1.0",
-    "puppeteer": "^5.3.1",
     "react-test-renderer": "^16.13.1"
   }
 }
