--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.3",
+    "react-transition-group": "^4.4.1",
     "react-yandex-maps": "^4.5.0",
     "typescript": "^3.7.5"
   },
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@types/react-test-renderer": "^16.9.3",
+    "@types/react-transition-group": "^4.4.0",
     "gh-pages": "^3.1.0",
     "react-test-renderer": "^16.13.1"
   }
